--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>계산기</title>
+    <link rel="stylesheet" href="index.css"/>
   </head>
   <body>
 
-    <table border = "2">
+    <table border = "2" class="tablesize">
       <tr><td colspan = "4">
         <input type="text" id = "display">
       </td></tr>
